(executable
  (name flodot)
  (public_name flodot)
  (libraries aaa.Aaa yojson cmdliner ocamlgraph)
  (flags (-principal -w -32 -w -9 -w -6))
  (preprocess (pps ppx_deriving.std)))

(alias
  (name default)
  (deps
   (file flodot.bc)
   (file flodot.exe)
   (file flodot.install)
   (file flodot.opam)))
