opam-version: "2.0"
version: "0.0.3~dev"
synopsis: "From JSON to dot"
maintainer: ["Ian Zimmerman <itz@no-use.mooo.com>"]
authors: ["Ian Zimmerman <itz@no-use.mooo.com>"]
license: "ZPL-2.1"
depends: [
  "aaa" {>= "0.0.8~dev"}
  "dune" {>= "1.11"}
  "ocaml" {>= "4.07"}
  "ocamlfind" {>= "1.8.1"}
  "ppx_deriving" {>= "4.4"}
  "yojson" {>= "1.7.0"}
  "cmdliner" {>= "1.0.4"}
  "ocamlgraph" {>= "1.8.8"}
]
build: [
  ["dune" "build"]
]
install: [
  ["dune" "install"]
]
dev-repo: "git+file:///home/itz/git/flodot#master"
